tests/paczka1/small_fuzzy/93547957.err
Error in line 7: doD A452 -5,4
Error in line 3: doD A452 92,2
Error in line 6: Ew1 A854 17,8
